--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "dependencies": {
+    "@uirouter/angularjs": "^1.1.0",
     "angular": "^1.7.5",
     "angular-loader": "^1.7.5",
-    "angular-route": "^1.7.5",
     "angular-ui-grid": "^4.12.4",
     "html5-boilerplate": "0.0.1"
   },
